# Copyright 2025 Google LLC
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

build_with_chromium = false

# Enables assertions on safety checks in libc++.
enable_safe_libcxx = true
enable_safe_libstdcxx = true

# Not relevant for XNNPACK
enable_java_templates = false

# Use bundled hermetic Xcode installation maintained by Chromium,
# except for local iOS builds where it is unsupported.
# Allow for mac cross compile on linux machines (unsupported for XNNPACK.)
if (host_os == "mac" || host_os == "linux") {
  _result = exec_script("//build/mac/should_use_hermetic_xcode.py",
                        [ target_os ],
                        "value")
  assert(_result != 2,
         "Do not allow building targets with the default " +
             "hermetic toolchain if the minimum OS version is not met.")
  use_system_xcode = _result == 0
}
